# speakup

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  config.example.json  config.example.jsonc  main.py  package.json  pyproject.toml  start-desktop.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  create-release.yml  publish-pypi.yml  publish-testpypi.yml
docs/: configuration.md  integrations.md  speakup-spec.md
droid-plugin/: README.md
droid-plugin/.factory-plugin/: plugin.json
droid-plugin/commands/: speakup.md
droid-plugin/hooks/: hooks.json  speakup-hook.py
let_me_know_agent/: __init__.py  app_logging.py  cli.py  config.py  dedup.py  errors.py  installer.py  models.py  pi_command.py  service.py
let_me_know_agent/integrations/: pi_extension.py
let_me_know_agent/playback/: base.py  macos.py  queued.py
let_me_know_agent/summarizers/: base.py  cerebras.py  command.py  lmstudio.py  openai.py  prompts.py  rule_based.py
let_me_know_agent/tts/: base.py  elevenlabs.py  kokoro.py  kokoro_cli.py  lmstudio.py  macos.py  openai.py  orpheus.py
pi-extension/: install.sh
pi-extensions/: install.sh  let-me-know-agent.ts  pi-extension.example.json  speakup.ts
plugins/droid/: README.md
plugins/droid/hooks/: speakup-hook.py
plugins/pi/: README.md  pi-extension.example.json  speakup.ts
plugins/speakup-factory-plugin/: README.md
plugins/speakup-factory-plugin/.factory-plugin/: marketplace.json  plugin.json
plugins/speakup-factory-plugin/commands/: speakup.md
plugins/speakup-factory-plugin/hooks/: hooks.json  speakup-hook.py
scripts/: create_release.sh
speakup/: __init__.py  app_logging.py  classifier.py  cli.py  config.py  context_naming.py  dedup.py  history.py  models.py  provider_catalog.py  registry.py  service.py  session_naming.py  text_transform.py  version.py
speakup-desktop/: README.md
speakup-desktop/src-tauri/: Cargo.toml  tauri.conf.json
speakup-desktop/src-tauri/.cargo/: config.toml
speakup-desktop/src-tauri/src/: main.rs
speakup-desktop/ui/: index.html
speakup/integrations/: droid.py  pi_extension.py
speakup/lib/: schema.py
speakup/playback/: __init__.py  base.py  composite.py  macos.py  queued.py
speakup/summarizers/: base.py  cerebras.py  gemini.py  lmstudio.py  prompts.py  rule_based.py
speakup/tts/: base.py  edge.py  elevenlabs.py  gemini.py  kokoro.py  kokoro_cli.py  lmstudio.py  macos.py  omlx.py
tests/: conftest.py  test_app_logging.py  test_cerebras_summarizer.py  test_cli.py  test_config_path_fallback.py  test_config_validation.py  test_context_naming.py  test_dedup.py  test_droid_plugin.py  test_gemini_summarizer.py  test_history.py  test_installer.py  test_integration_cerebras.py  test_integration_cli.py  test_integration_doctor.py  test_integration_gemini.py  test_integration_init_config.py  test_integration_lmstudio_non_audio.py  test_integration_logging.py  test_integration_no_play.py  test_integration_pi_wrapper.py  test_integration_privacy_fallback.py  test_integration_show_config.py  test_integration_show_paths.py  test_integration_text_cli.py  test_lib_schema.py  test_playback_queue.py  test_service.py  test_session_naming.py  test_text_transform.py  test_tts_edge.py  test_tts_gemini.py  test_tts_kokoro_cli.py  test_tts_orpheus.py  test_version.py
tests/manual/: test_summary_prompt.py
