[project]
name = "speakup"
version = "0.1.0"
description = "Speak concise agent status updates with pluggable local/remote backends"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dunamai>=1.20.0",
    "kokoro>=0.7.16",
    "structlog>=25.5.0",
    "typer>=0.15.0",
]

[project.scripts]
speakup = "speakup.cli:app"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["speakup", "speakup.summarizers", "speakup.tts", "speakup.playback", "speakup.integrations"]

[tool.pytest.ini_options]
markers = [
    "integration_cerebras: marks tests as Cerebras API integration tests (deselect with '-m \"not integration_cerebras\"')",
    "integration_gemini: marks tests as Gemini API integration tests (deselect with '-m \"not integration_gemini\"')",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
kokoro = [
    "en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl",
]
orpheus = [
    "numpy>=2.4.3",
    "snac>=1.2.1",
    "torch>=2.11.0",
]
