[project]
name = "speakup"
version = "0.4.1"
description = "Speak concise agent status updates with pluggable local/remote backends"
readme = "README.md"
license = "MIT"
authors = [
    {name = "Piotr Gredowski", email = "piotrgredowski@gmail.com"}
]
maintainers = [
    {name = "Piotr Gredowski", email = "piotrgredowski@gmail.com"}
]
keywords = ["tts", "agent", "notifications", "voice", "speech", "ai", "automation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Terminals",
]
requires-python = ">=3.13"
dependencies = [
    "dunamai>=1.20.0",
    "structlog>=25.5.0",
    "typer>=0.15.0",
]

[project.optional-dependencies]
edge = [
    "edge-tts>=7.2.3",
]

[project.urls]
Homepage = "https://github.com/piotrgredowski/speakup"
Documentation = "https://github.com/piotrgredowski/speakup#readme"
Repository = "https://github.com/piotrgredowski/speakup.git"
Issues = "https://github.com/piotrgredowski/speakup/issues"
Changelog = "https://github.com/piotrgredowski/speakup/blob/main/CHANGELOG.md"

[project.scripts]
speakup = "speakup.cli:app"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["speakup", "speakup.lib", "speakup.summarizers", "speakup.tts", "speakup.playback", "speakup.integrations"]

[tool.pytest.ini_options]
markers = [
    "integration_cerebras: marks tests as Cerebras API integration tests (deselect with '-m \"not integration_cerebras\"')",
    "integration_gemini: marks tests as Gemini API integration tests (deselect with '-m \"not integration_gemini\"')",
]

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F"]
ignore = ["E501"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "build>=1.2.0",
    "twine>=6.1.0",
    "ruff>=0.15.9",
]
