[package]
name = "speakup-desktop"
version = "0.4.1"
description = "Desktop notification history viewer for Speakup"
authors = ["Piotr Gredowski"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dev-dependencies]
tauri-cli = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
